# hardmath2_evaluation

./: .gitignore  README.md  pyproject.toml
scripts/: evaluate.py  query_models.py  summarize_eval.py
scripts/config/: eval_config.yaml  query_config.yaml  summary_config.yaml
src/hm2eval/: __init__.py  evaluator.py  parser.py  parser_rules.py  query.py
src/hm2eval/config/: model_config.json
